<resources>
    <string name="app_name">FoodFlash</string>

    <string name="taste">Taste</string>
    <string name="healthy">Healthy</string>
    <string name="categoryname">CategoryName</string>
    <string name="add_category">add_category</string>
    <string name="save">Save</string>
    <string name="write_category_name">Write category name...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="categories">Categories</string>
    <string name="map">Map</string>
    <string name="describe">Describe your meal</string>
    <string name="my_new_meal">My new meal</string>
    <string name="my_category">My category</string>
    <string name="tasty">Tasty</string>
    <string name="average_grade">Total grade:</string>

    <string name="facebook_app_id">557438107789061</string>
    <string name="loading_facebook">Loading facebook...</string>
    <string name="back_to_categories">Back to categories</string>
    <string name="average_score_null">Avg. ---</string>
    <string name="send_sms">Send grading SMS</string>
    <string name="choose_a_category">Choose a category:</string>
    <string name="total_grade">Total grade:</string>
    <string name="save_button">Save</string>
    <string name="meal_name">Meal name</string>
    <string name="edit">Edit</string>
</resources>
