<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_shape" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/category_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/babyBlue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="logo_top"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:src="@mipmap/logo_top_small"/>
    </android.support.v7.widget.Toolbar>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/meal_name_text"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_new_meal"
            android:layout_marginRight="@dimen/edit_button_width"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/category_text"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meal_name_text"
            android:textSize="20dp"
            android:text="@string/my_category"/>

        <ImageView
            android:id="@+id/edit_button"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:minWidth="@dimen/edit_button_width"
            android:maxWidth="@dimen/edit_button_width"
            android:src="@drawable/edit_button" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/meal_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/testmeal"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/image_margin"
        android:layout_marginBottom="@dimen/image_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/taste_text"
        style="@style/mealFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/taste"/>

    <LinearLayout
        android:id="@+id/taste_hearts"
        style="@style/mealFragment"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher">

        <ImageView
            android:id="@+id/heart_taste_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_9"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_taste_10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/healthy_text"
        style="@style/mealFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/healthy"/>

    <LinearLayout
        android:id="@+id/health_hearts"
        style="@style/mealFragment"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/heart_health_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_9"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

        <ImageView
            android:id="@+id/heart_health_10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/empty_heart"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/average_grade_text"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/average_grade" />

        <TextView
            android:id="@+id/average_number"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="32sp"/>

    </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/meal_description"
        style="@style/mealFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/description_box_margin"
        android:layout_marginBottom="@dimen/description_box_margin"
        android:text="@string/tasty"/>

    <ImageButton
        android:id="@+id/share_on_facebook"
        style="@style/mealFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin"
        android:layout_marginBottom="@dimen/image_margin"
        android:background="@drawable/share_facebook_small"/>

    <ImageButton
        android:id="@+id/btn_send_sms"
        style="@style/mealFragment"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/image_margin"
        android:layout_marginBottom="@dimen/image_margin"
        android:background="@drawable/sms"
        android:text="@string/send_sms"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>

