<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_shape" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/meal_editable_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/babyBlue"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="logo_top"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@mipmap/logo_top_small"/>
        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/name"
            style="@style/mealFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meal_name"
            android:textSize="32sp" />

        <TextView
            style="@style/mealFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_category"/>

        <Spinner
            android:id="@+id/spinner"
            style="@style/mealFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/edit_meal_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/testmeal"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginBottom="@dimen/image_margin"/>

            <ImageView
                android:id="@+id/camera_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_action_name" />

        </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taste_text"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/taste"/>

        <LinearLayout
            android:id="@+id/edit_taste_hearts"
            style="@style/mealFragment"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher">

            <ImageView
                android:id="@+id/edit_heart_taste_1"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_2"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_3"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_4"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_5"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart"/>

            <ImageView
                android:id="@+id/edit_heart_taste_6"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_7"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_8"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_9"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_taste_10"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

        </LinearLayout>

        <TextView
            android:id="@+id/healthy_text"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/healthy"/>

        <LinearLayout
            android:id="@+id/edit_health_hearts"
            style="@style/mealFragment"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_heart_health_1"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_2"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_3"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_4"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_5"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_6"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_7"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_8"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_9"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

            <ImageView
                android:id="@+id/edit_heart_health_10"
                android:clickable="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/empty_heart" />

        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/average_grade_text"
                style="@style/mealFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/total_grade" />

            <TextView
                android:id="@+id/edit_average_number"
                style="@style/mealFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="0"
                android:textSize="32sp"/>

        </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/desc"
            style="@style/mealFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:textAlignment="gravity"
            android:padding="16dp"
            android:hint="@string/describe"/>

        <Button
            android:id="@+id/save_changes_button"
            style="@style/mealFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/image_margin"
            android:text="@string/save_button" />

    </LinearLayout>

</ScrollView>